Istio/10-PeerAuthentication/02-portLevelMtls/authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: helloworld-mtls
  namespace: default
spec:
  selector:
    matchLabels:
      app: helloworld
  mtls:
    mode: STRICT
  portLevelMtls:
    443:
      mode: DISABLE
